# advent-of-code

2015/: day_01.exs  day_02.exs  day_03.exs  day_04.exs  day_05.exs  day_06.exs  day_06.txt  day_07.exs
2019/: day_01.exs  day_02.exs  day_02.txt  day_03.exs  day_04.exs  day_05.txt
2022/: day01.livemd  day02.livemd  day03.livemd  day04.livemd  day05.livemd  day06.livemd  day07.livemd  day08.livemd  day09.livemd  day10.livemd
aoc2020/: Cargo.toml
aoc2020/src/: bin.rs  lib.rs
