[package]
name = "aoc2020"
version = "0.1.0"
authors = ["Scott <dscottwiggins@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"

[lib]
name = "aoc2020"
path = "src/lib.rs"


[[bin]]
name = "aoc2020_bin"
path = "src/bin.rs"